--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>John Keyes</title>
+        <title>pathfinder</title>
         <link rel="stylesheet" type="text/css" href="http://keyes.ie/style.css" media="screen"/>
         <link media="only screen and (max-device-width: 480px)"
             href="http://keyes.ie/iPhone.css" type="text/css" rel="stylesheet" />
