--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     </head>
-    <body>
+    <body class="project">
         <header>
             <h1>pathfinder</h1>
         </header>
